tests/fixtures/components/invalid-foldable/aware.blade.php
@blaze

@aware(['variant' => 'default'])

<div class="item item-{{ $variant }}">
    {{ $slot }}
</div>
